err/lemon-dashboard.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Lemon-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/dashboard'...
Listing './lib/python3.5/site-packages/dashboard/locale'...
Listing './lib/python3.5/site-packages/dashboard/locale/ru'...
Listing './lib/python3.5/site-packages/dashboard/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/dashboard/static'...
Listing './lib/python3.5/site-packages/dashboard/static/dashboard'...
Listing './lib/python3.5/site-packages/dashboard/static/dashboard/css'...
Listing './lib/python3.5/site-packages/dashboard/static/dashboard/images'...
Listing './lib/python3.5/site-packages/dashboard/templates'...
Listing './lib/python3.5/site-packages/dashboard/templates/admin'...
Listing './lib/python3.5/site-packages/dashboard/templates/dashboard'...
Listing './lib/python3.5/site-packages/dashboard/templates/dashboard/tags'...
Listing './lib/python3.5/site-packages/dashboard/templatetags'...
Listing './lib/python3.5/site-packages/django_intellipages-0.1.egg-info'...
Listing './lib/python3.5/site-packages/intellipages'...
Listing './lib/python3.5/site-packages/intellipages/templatetags'...
Listing './lib/python3.5/site-packages/intellipages/tests'...
Listing './lib/python3.5/site-packages/lemon'...
Listing './lib/python3.5/site-packages/lemon/locale'...
Listing './lib/python3.5/site-packages/lemon/locale/ru'...
Listing './lib/python3.5/site-packages/lemon/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lemon/migrations'...
Compiling './lib/python3.5/site-packages/lemon/sites.py'...
***   File "./lib/python3.5/site-packages/lemon/sites.py", line 106
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lemon/static'...
Listing './lib/python3.5/site-packages/lemon/static/lemon'...
Listing './lib/python3.5/site-packages/lemon/static/lemon/css'...
Listing './lib/python3.5/site-packages/lemon/static/lemon/images'...
Listing './lib/python3.5/site-packages/lemon/static/lemon/images/jquery-ui'...
Listing './lib/python3.5/site-packages/lemon/static/lemon/images/menu'...
Listing './lib/python3.5/site-packages/lemon/static/lemon/js'...
Listing './lib/python3.5/site-packages/lemon/templates'...
Listing './lib/python3.5/site-packages/lemon/templates/admin'...
Listing './lib/python3.5/site-packages/lemon/templates/admin/auth'...
Listing './lib/python3.5/site-packages/lemon/templates/admin/auth/user'...
Listing './lib/python3.5/site-packages/lemon/templates/admin/edit_inline'...
Listing './lib/python3.5/site-packages/lemon/templates/admin/includes'...
Listing './lib/python3.5/site-packages/lemon/templates/lemon'...
Listing './lib/python3.5/site-packages/lemon/templates/registration'...
Listing './lib/python3.5/site-packages/lemon/templatetags'...
Listing './lib/python3.5/site-packages/lemon/tests'...
Listing './lib/python3.5/site-packages/lemon_dashboard-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
